# GScan

./: .env.example  .ghunterignore.example  .gitignore  QUICK_START.md  README.md  ghunter_pro.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
ghunter/: __init__.py  ai.py  allowlist.py  audit.py  cli.py  core.py  dependencies.py  export.py  models.py  progress.py  report.py  scanners.py  search.py  ui.py  version.py
ghunter/templates/: report.html.j2
tests/: test_ghunter.py
