[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "g-hunter"
version = "3.1.0"
description = "Professional GitHub Secrets & Sensitive Information Hunter"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Security Research Team" }]
keywords = ["security", "secrets", "github", "trufflehog", "gitleaks", "dorking"]

# Pinned with lower bounds; see requirements.txt for the reproducible set.
dependencies = [
    "aiohttp>=3.9.0,<4",
    "python-dotenv>=1.0.0,<2",
    "tqdm>=4.66.0,<5",
    "colorama>=0.4.6,<1",
]

[project.optional-dependencies]
# AI triage is optional; the tool degrades gracefully without it.
ai = ["google-generativeai>=0.3.0"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[project.scripts]
ghunter = "ghunter_pro:main"

[tool.setuptools]
packages = ["ghunter"]
py-modules = ["ghunter_pro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
